tests/fail/test_comptime_fail.stderr
error[E0406]: Compile-time error: This is an expected failed test for compile_error
 --> tests/fail/test_comptime_fail.tk:4:5
  |
 4 |     compile_error("This is an expected failed test for compile_error")
  |     ^
